--- a/.github/workflows/pulumi-push.yml
+++ b/.github/workflows/pulumi-push.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Install Pulumi
       uses: pulumi/actions/setup@v1
@@ -24,7 +24,7 @@ jobs:
       uses: azure/actions/cli@v1
       with:
         inlineScript: |
-          az account set --subscription <subscription_id>
+          az account set --subscription c1366384-ad08-40cd-9925-a888a47701a7
 
     - name: Deploy Pulumi stack
       uses: pulumi/actions/cli@v1
