--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -1,14 +1,14 @@
 name: Run Azure Login with OpenID Connect and PowerShell
-on:
-  push:
-    branches:
-      - main
+on: push
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
+permissions:
+      id-token: write
+      contents: read
+      
+jobs: 
+  Windows-latest:
+      runs-on: windows-latest
+      steps:
       - name: Install Azure cli
         run: |
           sudo apt-get install ca-certificates curl apt-transport-https lsb-release gnupg
